# garage-radar

./: .env.example  .gitignore  Makefile  PROJECT_BLUEPRINT.md  PROJECT_PLAN.md  README.md  RISKS.md  docker-compose.yml  playwright_probe.py
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7d4a8c2b1f70_generalize_vehicle_identity.py  7f6c3d2b9a11_add_currency_to_comp_clusters.py  9b6f3d1a2c4e_add_auction_state_fields.py  a3f2d1e8c904_generalize_to_multi_make.py  c4e2f8b91a6d_generalize_comp_clusters.py  e09629634686_initial_schema.py  f2b2d7a4c901_merge_currency_and_auction_heads.py
backend/garage_radar/: config.py  vehicle_profiles.py  watchlist.py
backend/garage_radar/api/: __init__.py  deps.py  filtering.py  main.py  schemas.py
backend/garage_radar/data/: vehicle_model_library.json  vehicle_profiles.json  vehicle_target_presets.json
backend/garage_radar/db/: __init__.py  models.py  upsert.py
backend/garage_radar/dedup/: __init__.py  engine.py
backend/garage_radar/insights/: alert_engine.py  comp_clusters.py  runner.py
backend/garage_radar/maintenance/: __init__.py  auction_refresh.py
backend/garage_radar/normalize/: body_style.py  color.py  generation.py  nlp_flags.py  pipeline.py  transmission.py  vehicle_identity.py
backend/garage_radar/notifications/: notifier.py
backend/garage_radar/scheduler/: jobs.py  (+2 more)
backend/tests/: test_api.py  test_auction_refresh.py  test_config.py  test_db_helpers.py  test_dedup.py  test_filtering.py  test_insights.py  test_normalize.py  test_notifications.py  test_parsers.py  test_parsers_additional.py  test_refresh_identity_script.py  test_scheduler.py  test_source_targeting.py  test_ua_rotation.py  test_vehicle_profiles.py  test_wikimedia_reference.py
(+88 files in other folders)
